# BOF.NET

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  bofnet.cna  helloWorld.boo
bofs/: CMakeLists.txt  beacon.h  bofnet_execute.cpp  bofnet_test.cpp  metahost.h  mscorlib.h  patchless_amsi.h  utils.h
managed/: BOFNET.sln  CMakeLists.txt
managed/BOFNET/: BOFNET.csproj  BeaconApi.cs  BeaconConsoleWriter.cs  BeaconJob.cs  BeaconJobWriter.cs  BeaconObject.cs  BeaconOutputWriter.cs  DefaultBeaconApi.cs  FodyWeavers.xml  FodyWeavers.xsd  Runtime.cs  Unpack.cs  Utils.cs
managed/BOFNET/Bofs/: AssemblyLoader.cs  AssemblyLoaderBig.cs  ExecuteAssembly.cs  HelloWorld.cs  Initializer.cs  List.cs  ListAssemblies.cs  PatchEnvironmentExit.cs  Screenshot.cs  VFS.cs
managed/BOFNET/Bofs/Boo/: BooExecutor.cs  BooExecutorImpl.cs  BooRunner.cs
managed/BOFNET/Bofs/Jobs/: JobKill.cs  JobList.cs  JobRunner.cs  JobRunnerAssembly.cs  JobStatus.cs
managed/BOFNET/Bofs/WebServer/: Files.htm  WebServer.cs
managed/BOFNET/Properties/: AssemblyInfo.cs
managed/BOFNETExamples/: BOFNETExamples.csproj  HelloWorld.cs
managed/BOFNETExamples/Properties/: AssemblyInfo.cs
managed/BOFNET_Tests/: BOFNET_Tests.csproj  Program.cs  packages.config
managed/BOFNET_Tests/Properties/: AssemblyInfo.cs
managed/lib/: booc.exe.config
toolchain/: Linux-mingw32.cmake  Linux-mingw64.cmake
